# aiagt-aia

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: cd.yml  ci.yml
docs/: BUILD_AI_AGENT_DIAGRAMS.md  BUILD_AI_AGENT_FROM_SCRATCH_SLIDES.md  BUILD_PRODUCTION_SCALABLE_AI_AGENT_ARCHITECTURE_SLIDES.md  ERROR_LOG.md  EXECUTION_STRATEGY_REPORT.md  PRD.md  SPEAKER_SCRIPT_BUILD_AI_AGENT_FROM_SCRATCH.md  SPEAKER_SCRIPT_PRODUCTION_ARCHITECTURE.md  TDD.md  diagram.md
mock_data/: qa_issues_list_100_clean.csv  qa_issues_list_100_medium_messy.csv  qa_issues_list_100_messy.csv  qa_issues_list_100_very_messy.csv
specs/v1/: README.md
specs/v1/prompts/: classification.system.md  classification.user.md  duplicate-check.system.md  duplicate-check.user.md  enrichment.system.md  enrichment.user.md  jira-ticket.system.md  jira-ticket.user.md  orchestrator-routing.system.md  orchestrator-routing.user.md  rag-query-builder.system.md  slack-summary.system.md  slack-summary.user.md
specs/v1/schemas/: classification_output.schema.json  enriched_task.schema.json  final_response.schema.json  intake_request.schema.json  parsed_issue.schema.json  route_plan.schema.json
src/aia/: __init__.py  config.py
src/aia/api/: __init__.py  main.py
tests/: test_answer_normalization.py  test_api.py  test_enrichment_normalization.py  test_jira_project_key_resolution.py  test_jira_scope_payload_toggle.py  test_parallel_execution_toggle.py  test_route_intent_filters.py  test_telegram_chat_id_sanitization.py
ui/: streamlit_app.py
(+16 files in other folders)
